--- a/livinglotsla/static/css/pages/map.less
+++ b/livinglotsla/static/css/pages/map.less
@@ -6,8 +6,8 @@
     position: fixed;
     margin-top: @header-height;
 
-    @media (max-width: @screen-sm-max) {
-        margin-top: @header-height-sm;
+    @media (max-width: @screen-xs-max) {
+        margin-top: @header-height-xs;
     }
 }
 
