--- a/livinglotsla/static/css/variables.less
+++ b/livinglotsla/static/css/variables.less
@@ -6,7 +6,7 @@
 // Page frame
 @frame-border: 1px solid #aaa;
 @header-height: 127px;
-@header-height-sm: 77px;
+@header-height-xs: 77px;
 
 
 // Lot layer colors
